<resources>
    <string name="app_name">TwoActivitiesChallenge</string>
    <string name="article_title">Si Cantik dan Si Buruk Rupa</string>
    <string name="article_title2">Si Jubah Merah</string>
    <string name="article_title3">Putri Duyung</string>

    <string name="article_text"> - Pada suatu hari di sebuah istana saat sebuah pesta yang sangat meriah sedang berlangsung, tiba-tiba ada seorang nenek tua yang meminta bantuan pada sang pangeran. Nenek tua ini memohon agar dirinya diperbolehkan untuk berteduh sementara karena di luar sedang turun hujan yang sangat besar. Nenek ini menawarkan setangkai bunga mawar merah sebagai tanda terima kasih.

Namun, ternyata sang pangeran tidak mengizinkan nenek itu untuk berteduh di istananya yang sangat megah, ia justru langsung mengusirnya tanpa berpikir panjang. Nenek itu pun kesal dan mengutuk sang pangeran mejadi buruk rupa dan pelayan-pelayan di rumahnya diubah menjadi perabot rumah tangga. Selain itu, sang nenek juga menghapus memori orang-orang yang ada di sekitar tentang istana itu.

Sang pangeran dan pelayannya sangat terkejut. Sang nenek tua lalu berkata padanya, “Kamu bisa kembali berubah seperti semula, jika ada orang lain yang mencintaimu secara tulus sebelum musim gugur tiba. Kalau kamu tidak bisa menemukannya, kamu dan pelayanmu akan seperti ini selamanya,”

Beberapa waktu kemudian, ada seorang pedagang yang tersesat di sebuah hutan dan ia mencari perlindungan untuk berteduh dari badai. Pedagang ini menemukan sebuah istana yang sudah tidak terawat dan sudah kosong. Saat ia berteduh, ia menemukan setangai bunga mawar yang sangat cantik. Ia pun berniat untuk membawanya pulang untuk diberikan pada anaknya, yang bernama Belle. Saat sang pangeran mengetahui bahwa bunganya telah diambil, ia tentu saja menjadi murka, dan ia pun menangkap serta menawan pedagang itu.

Di desa, Belle sangat khawatir karena ayahnya tidak pulang selama berhari-hari. Akhirnya, Belle pun pergi untuk mencari di mana ayahnya. Saat Belle sedang mencari ayahnya, ia tersesat. Sama seperti ayahnya, Belle menemukan istana yang sudah kosong dan tidak terawat itu. Di dalam sana, saat Belle sedang berjalan-jalan dan masuk ke dalam sebuah ruangan, ia tidak sengaja bertemu ayahnya.

Tentu saja, Belle segera ingin membebaskan ayahnya tapi tiba-tiba sang pangeran muncul dan segera menghentikan mereka. Belle pun mengusulkan agar ia membebaskan ayahnya dan ditukar oleh Belle yang tinggal di istana. Sang pangeran pun setuju.

Di hari berikutnya, saat Belle sedang berjalan-berjalan mengelilingi istana, ia tidak sengaja memasuki ruangan terlarang. Di ruangan itu, ada setangkai bunga mawar merah dan Belle memetiknya. Saat sang pangeran mengetahui itu, ia sangat marah dan mengusir Belle dari istana. Belle pun pergi dengan sedih si malam hari.

Di perjalanan pulang, Belle dicegah oleh segerombolan serigala, di saat tersudut dan akan di mangsa sang pangeran datang menyelamatkan Belle. Ia pun terluka parah—tercakar dan digigit segerombolan serigala. Kemudian, sang pangeran dirawat dengan penuh perhatian oleh Belle di istana. Saat itu juga, Belle dijamu oleh para pelayan istana yang sudah berubah menjadi perabot rumah tangga.

Di saat yang bersamaan, ayah Belle di desa meminta tolong pada warga yang lain untuk membantunya membebaskan anaknya yang sedang menjadi tawanan seorang monster di istana. Seorang lelaki yang bernama Gaston, orang yang menyukai Belle menganggap ayahnya sedang mengada-ngada dan gila. Ia justru memasukkan ayah Belle ke dalam rumah sakit jwa.

        Namun, Gaston tetap pergi ke istana untuk mencari Belle. </string>

    <string name="article_text2"> - Di suatu desa pada zaman dahulu ada seorang anak bernama Irine. Ia dicintai oleh semua orang terlebih lagi Neneknya karena ia manis dan baik budi.
Ketika ia merayakan hari ulang tahunnya, sang Nenek memberikan Jubah Merah bertopi yang lucu. Ia amat bahagia dan menyukainya. Jubah itupun langsung dipakainya untuk berjalan-jalan.
Sahabat-sahabatnya seperti sapi, kucing, anjing, kagum pada jubah itu. Pada suatu hari seperti biasa ia ber- jalan-jalan di hutan untuk melihat bunga-bunga yang indah.
Jubah Merah melihat sekuntum bunga yang warnanya sangat menarik sehingga ia tertarik untuk memetiknya. “Bunga ini akan aku berikan pada Nenek, Nenek pasti senang,” serunya penuh kegirangan. Sambil memetik bunga-bunga itu ia bernyanyi-nyanyi kecil.
Tanpa ia sadari, ada bahaya sedang mengintai. Dari balik pohon yang tidak jauh dari tempat ia ber- diri, serigala jahat diam-diam ber- sembunyi dan membuka mulutnya lebar-lebar. “Sekarang aku makan kau,” dengan mata berkilap-kilap senang ia beranjak dari tempatnya.
Akan tetapi sebelah kakinya terjepit perangkap kelinci, tapi ia tidak menjerit. Sambil menahan rasa sakit ia menarik kakinya yang luka dari perangkap itu pelan-pelan.
Si Jubah Merah tidak mengetahui kejadian itu. Setelah memetik bunga, iapun meneruskan perjalanan.
Namun serigala tidak menyerah dengan otaknya yang licik, ia terus berpikir bagaimana cara memakan Jubah Merah.
” Nah, sebaiknya aku makan dulu Neneknya, baru Jubah Merah, ” ucapnya sambil tersenyum licik.
Dengan memotong jalan, serigala pergi ke rumah Nenek. Iapun lebih dulu tiba dari Jubah Merah. Kemudian iapun mengetuk pintu ….. ” Nenek, saya Jubah Merah,” ucapnya menirukan suara Irine.
Mendengar itu Nenek menjadi heran karena suara Jubah Merah tidak seperti biasanya. ” Kenapa suaramu berubah jadi aneh Jubah Merah” kata Nenek dengan penuh curiga.
” Saya sedang tidak enak badan, Nek ” jawab serigala.
Segera Nenek turun dari tempat tidur dan membukakan pintu.
Begitu pintu terbuka yang dilihatnya bukan Jubah Merah melainkan serigala yang sudah membuka mulutnya lebar-lebar. Nenek kaget dan ketakutan serta tidak bisa berbuat apa-apa. Saat itulah dengan cepat serigala menelan Nenek.
Setelah puas, lalu serigala memakai piyama Nenek dan naik ke tempat tidur serta menutup wajahnya dengan selimut, seperti sedang sakit.
Tak lama kemudian, serigala mendengar suara nyanyian dari Jubah Merah. Cepat-cepat ia mempersiapkan diri berpura-pura menjadi Nenek.

” Buka pintunya, Nek” seru Irine.
” Masuklah pintu tidak dikunci. Akhirnya kau datang juga, Nenek sudah lama menunggumu.” Mendengar suara Neneknya yang seperti itu ia menjadi heran.
” Nek, kok suaranya jadi aneh begitu ? ” tanya Jubah Merah penuh curiga.
” Iya, Nenek sedang masuk angin, jadinya serak ,” jawab Nenek palsunya.
” Kasihan Nenek, ini saya bawakan bunga yang indah “. Kemudian iapun meletakkan bunga di jambangan dan meletakkan kue serta apel di atas meja.
Si Jubah Merah sama sekali tidak mengetahui bahwa yang tidur dipembaringan itu adalah serigala jahat.
Ia pun berjalan mendekati Nenek, tapi ia sangat kaget dan heran melihat perubahan pada diri Nenek.

Telinga, mata, serta mulut Nenek menjadi besar. Karena tidak sabar lagi untuk memakan Jubah Merah, serigala melompat dari tempat tidur kemudian menerkam Irine.</string>

    <string name="article_text3"> - Raja Triton adalah raja lautan yang perkasa, ia mempunyai banyak anak perempuan. Mereka mencintai dunia bawah laut dimana tempat mereka tinggal. Tetapi Ariel yaitu anak bungsunya, memimpikan dunia di atas permukaan air, dunia manusia. Meskipun ayahnya telah memperingatkannya agar tidak ke dunia manusia, Ariel mengabaikannya. Dia sering berenang ke permukaan laut untuk melihat dunia yang berada di atas permukaan air.
Ariel dan sahabatnya yang bernama Flounder, senang sekali mengunjungi Skatel si burung camar. Skatel itu memberitahu mereka tentang segala barang manusia yang ditemukan Ariel di dasar laut.

Suatu hari Raja Triton mengetahui bahwa Ariel sering pergi ke permukaan laut. Mengetahui itu Raja Triton sangat marah. Dia mencemaskan keselamatan anak perempuannya, Ariel. Raja Triton meminta sahabat kepercayaannya, Sebastian si kepiting untuk mengawasi Ariel.
Beberapa hari kemudian Ariel melihat ada kapal melintas di permukaan laut.

“Manusiaaaa!!!” seru Ariel sambil bergegas berenang mendekati kapal itu.

“Oh, tidak!” teriak Sebastian si kepiting. Sebastian dan Flounder segera mengejar Ariel.

Ketika Ariel muncul di permukaan air, Ariel melihat sebuah kapal besar penuh pelaut yang bernyanyi dan menari- nari. Mata Ariel bercahaya ketika dia melihat pemuda gagah, para pelaut lain memanggilnya Pangeran Erik. Ariel jatuh cinta pada pangeran Erik di pandangan pertama itu. Tiba-tiba langit menjadi gelap dan petir menyambar-nyambar. Kapal yang dinaiki Pangeran Erik bukanlah tandingan badai yang dasyat itu. Kapal itu terombang-ambing, ombak begitu besar dan seketika Pangeran Erik terlempar ke laut.

“Aku harus menyelamatkannya!” teriak Ariel.</string>
    <string name="button_main"> 1 </string>
    <string name="button_main2"> 2 </string>
    <string name="button_main3"> 3 </string>
    <string name="button_back"> Back </string>

</resources>