<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="launchThirdActivity"
        android:text="@string/button_main2"
        android:textColor="#455A64"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginTop="152dp"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"
        android:text="@string/article_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/article_title2"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"
        android:text="@string/article_title2"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/article_title3"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"
        android:text="@string/article_title3"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title2"
        app:layout_constraintVertical_bias="0.167"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
        android:textColor="#455A64"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="launchFourthActivity"
        android:text="@string/button_main3"
        android:textColor="#455A64"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.003" />

</androidx.constraintlayout.widget.ConstraintLayout>